# Process

./: .coveragerc  .gitignore  README.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  coverage.yml  packaging.yml
docs/: .spelling_wordlist.txt  Makefile  conf.py  index.rst  requirements.txt
docs/api/: index.rst
process/: __init__.py  _command.py
process/tests/: test_command.py
