[metadata]
name = process
url = https://github.com/Julian/Process
project_urls =
    Docs = https://process.readthedocs.io/en/latest/
description = Testing-friendly subprocess spawning
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian@GrayVines.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<'3.8'
    attrs>=17.4.0
    filesystems
    pyrsistent>=0.14.0

[bdist_wheel]
universal = 1

[flake8]
exclude =
    process/__init__.py
